--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.36",
     "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vuetify": "^3.3.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.0",
